--- a/application/views/scripts/gestion-prescriptions/index.phtml
+++ b/application/views/scripts/gestion-prescriptions/index.phtml
@@ -21,7 +21,7 @@
 		<h3 class='page-header'>Gestion des prescriptions types</h3>
 		<br/>
 	";
-	
+
 	echo "
 		<form id='FormPrescriptioncat_".$this->idCategorie."' >
 			<input type='hidden' name='type' value='categorie' />
@@ -85,7 +85,7 @@
 				</table>
 			</li>
 		";
-	}	
+	}
 	echo "
 		</ul>
 		<button class='categorie btn' >Ajouter</button>
@@ -95,7 +95,7 @@
 ?>
 
 
- 
+
 <!-- Modal -->
 <div id="myModal" class="modal hide" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style='width:1000px;margin-left:-500px;' >
 	<div class="modal-header">
@@ -107,14 +107,14 @@
 	<div class="modal-footer">
 		<img id='loading' src='/images/load.gif' style='display:none;'/>
 		<button class="btn btn-primary savePrescription">Sauvegarder</button>
-		<button class="btn closemodal" data-dismiss="modal" aria-hidden="true">Annuler</button>	
+		<button class="btn closemodal" data-dismiss="modal" aria-hidden="true">Annuler</button>
 	</div>
 </div>
 
 <script type="text/javascript">
 
 $(document).ready(function(){
-	
+
 //Affiche les textes appartenant à la catégorie
 	$(".showDetailCat").live('click',function(){
 		//requete ajax pour trouver les prescriptions faisant partie de cette catégorie
@@ -132,7 +132,7 @@ $(document).ready(function(){
 		});
 		return false;
 	});
-	
+
 	//Masque les textes appartenant à la catégorie
 	$(".hideDetailCat").live('click',function(){
 		var tabId = $(this).attr('id').split('_');
@@ -185,7 +185,7 @@ $(document).ready(function(){
 		});
 		return false;
 	});
-	
+
 	$(".hideDetailArticle").live('click',function(){
 		var tabId = $(this).attr('id').split('_');
 		var idArticle = tabId[1];
@@ -195,9 +195,9 @@ $(document).ready(function(){
 		return false;
 	});
 	//Gestion des catégories
-	
+
 	var dialogCategorie = $('<div style="display:none;"></div>').appendTo('body');
-	
+
 	$(".categorie").live('click',function(){
 		//On ouvre la boite de dialogue
 		$.ajax({
@@ -211,7 +211,7 @@ $(document).ready(function(){
 		});
 		return false;
 	});
-	
+
 	$(".editCategorie").live('click',function(){
 		//On ouvre la boite de dialogue
 		var id = $(this).attr('id');
@@ -226,45 +226,51 @@ $(document).ready(function(){
 			}
 		});
 		return false;
-	});	
-	
+	});
+
 	dialogCategorie.dialog({
 		title: "Gestion",
 		modal: true,
 		autoOpen: false,
 		width: 'auto',
 		height: 'auto',
-		buttons: {
-			"Sauvegarder": function() {
-				$.ajax({
-					type: "POST",
-					url: "/gestion-prescriptions/savecategorie",
-					data: $("#formCategorie").serialize(),
-					success: function(msg){
-						if($("#idCat").val()){
-							$("#categorie_"+$("#idCat").val()).html(msg);
-						}else{
-							$(".prescriptioncat").append(msg);
-						}
-						dialogCategorie.html("");
-						dialogCategorie.dialog("close");
-					}
-				});
-				return false;
-			},
-			"Annuler": function() {
-				dialogCategorie.html("");
-				dialogCategorie.dialog("close");
-			}
-		},
-		close: function(event, ui){
-			
-		}
+		buttons: [
+            {
+                text: 'Sauvegarder',
+                class: 'btn btn-success',
+                click: function() {
+                    $.ajax({
+                        type: "POST",
+                        url: "/gestion-prescriptions/savecategorie",
+                        data: $("#formCategorie").serialize(),
+                        success: function(msg){
+                            if($("#idCat").val()){
+                                $("#categorie_"+$("#idCat").val()).html(msg);
+                            }else{
+                                $(".prescriptioncat").append(msg);
+                            }
+                            dialogCategorie.html("");
+                            dialogCategorie.dialog("close");
+                        }
+                    });
+
+                    return false;
+                }
+            },
+            {
+                text: 'Annuler',
+                class: 'btn',
+                click: function() {
+                    dialogCategorie.html("");
+                    dialogCategorie.dialog("close");
+                }
+            }
+        ],
 	});
-	
+
 //Gestion des textes
 	var dialogTexte = $('<div style="display:none;"></div>').appendTo('body');
-		
+
 	$(".addTexteCat").live('click',function(){
 		//On ouvre la boite de dialogue
 		//On commence par récuperer l'id de la catégorie dans laquelle on va inserer le texte
@@ -283,7 +289,7 @@ $(document).ready(function(){
 		});
 		return false;
 	});
-	
+
 	$(".editTexte").live('click',function(){
 		//On ouvre la boite de dialogue
 		//On commence par récuperer l'id de la catégorie dans laquelle on va inserer le texte
@@ -301,42 +307,48 @@ $(document).ready(function(){
 		});
 		return false;
 	});
-	
+
 	dialogTexte.dialog({
 		title: "Gestion texte",
 		modal: true,
 		autoOpen: false,
 		width: 'auto',
 		height: 'auto',
-		buttons: {
-			"Sauvegarder": function() {
-				$.ajax({
-					type: "POST",
-					url: "/gestion-prescriptions/savetexte",
-					data: $("#formTexte").serialize(),
-					success: function(msg){
-						if($("#idCategorie").val()){
-							//cas d'un création
-							$("#prescriptiontexte_"+$("#idCategorie").val()).append(msg);
-						}else{
-							$("#texteid_"+$("#idTexte").val()).html(msg);
-						}
-						dialogTexte.html("");
-						dialogTexte.dialog("close");
-					}
-				});
-				return false;
-			},
-			"Annuler": function() {
-				dialogTexte.html("");
-				dialogTexte.dialog("close");
-			}
-		},
-		close: function(event, ui){
-			
-		}
+		buttons: [
+            {
+                text: 'Sauvegarder',
+                class: 'btn btn-success',
+                click: function() {
+                    $.ajax({
+                        type: "POST",
+                        url: "/gestion-prescriptions/savetexte",
+                        data: $("#formTexte").serialize(),
+                        success: function(msg){
+                            if($("#idCategorie").val()){
+                                //cas d'un création
+                                $("#prescriptiontexte_"+$("#idCategorie").val()).append(msg);
+                            }else{
+                                $("#texteid_"+$("#idTexte").val()).html(msg);
+                            }
+                            dialogTexte.html("");
+                            dialogTexte.dialog("close");
+                        }
+                    });
+
+                    return false;
+                }
+            },
+            {
+                text: 'Annuler',
+                class: 'btn',
+                click: function() {
+                    dialogTexte.html("");
+                    dialogTexte.dialog("close");
+                }
+            }
+        ],
 	});
-	
+
 //Gestion des articles
 	var dialogArticle = $('<div style="display:none;"></div>').appendTo('body');
 
@@ -364,36 +376,42 @@ $(document).ready(function(){
 		autoOpen: false,
 		width: 'auto',
 		height: 'auto',
-		buttons: {
-			"Sauvegarder": function() {
-				$.ajax({
-					type: "POST",
-					url: "/gestion-prescriptions/savearticle",
-					data: $("#formArticle").serialize(),
-					success: function(msg){
-						if($("#idTexte").val()){
-							//cas d'un création
-							$(".prescriptionarticle_"+$("#idTexte").val()).append(msg);
-						}else{
-							//cas d'une édition					
-							$("#article_"+$("#idArticle").val()).html(msg);
-						}
-						dialogArticle.html("");
-						dialogArticle.dialog("close");
-					}
-				});
-				return false;
-			},
-			"Annuler": function() {
-				dialogArticle.html("");
-				dialogArticle.dialog("close");
-			}
-		},
-		close: function(event, ui){
-			
-		}
+		buttons: [
+            {
+                text: 'Sauvegarder',
+                class: 'btn btn-success',
+                click: function() {
+                    $.ajax({
+                        type: "POST",
+                        url: "/gestion-prescriptions/savearticle",
+                        data: $("#formArticle").serialize(),
+                        success: function(msg){
+                            if($("#idTexte").val()){
+                                //cas d'un création
+                                $(".prescriptionarticle_"+$("#idTexte").val()).append(msg);
+                            }else{
+                                //cas d'une édition
+                                $("#article_"+$("#idArticle").val()).html(msg);
+                            }
+                            dialogArticle.html("");
+                            dialogArticle.dialog("close");
+                        }
+                    });
+
+                    return false;
+                }
+            },
+            {
+                text: 'Annuler',
+                class: 'btn',
+                click: function() {
+                    dialogArticle.html("");
+                    dialogArticle.dialog("close");
+                }
+            }
+        ],
 	});
-	
+
 	$(".editArticle").live('click',function(){
 		//On ouvre la boite de dialogue
 		//On commence par récuperer l'id de la catégorie dans laquelle on va inserer le texte
@@ -454,7 +472,7 @@ $(document).ready(function(){
 		});
 		return false;
 	});
-	
+
 	$(".selectTexte").live('click',function(){
 		$("#PRESCRIPTIONTYPE_TEXTE").val($(this).attr('id'));
 		$.ajax({
@@ -467,7 +485,7 @@ $(document).ready(function(){
 		});
 		return false;
 	});
-	
+
 	$(".selectArticle").live('click',function(){
 		$("#PRESCRIPTIONTYPE_ARTICLE").val($(this).attr('id'));
 		$.ajax({
@@ -480,7 +498,7 @@ $(document).ready(function(){
 		});
 		return false;
 	});
-	
+
 	$(".retour").live('click',function(){
 		if($(this).attr('id') == 'retourCategorie'){
 			$("#PRESCRIPTIONTYPE_CATEGORIE").val('');
@@ -520,11 +538,11 @@ $(document).ready(function(){
 					{
 						$("#prescriptiontype_"+$("#ID_PRESCRIPTIONTYPE").val()).remove();
 					}
-					
+
 					if($("#PRESCRIPTIONTYPE_CATEGORIE").val() == '')
 					{
 						//dans le cas ou la prescription n'appartient à aucune catégorie
-						$(".prescriptiontypeWithoutCat").append(msg);							
+						$(".prescriptiontypeWithoutCat").append(msg);
 					}
 					else if($("#PRESCRIPTIONTYPE_TEXTE").val() == '' && $("#PRESCRIPTIONTYPE_ARTICLE").val() == '')
 					{
@@ -558,12 +576,12 @@ $(document).ready(function(){
 		}
 		return false;
 	});
-	
+
 	$(".suppAssoc").live('click',function(){
 		$(this).parent().parent().remove();
 		return false;
 	});
-	
+
 	$(".editPrescriptionType").live('click',function(){
 		var tabId = $(this).parent().parent().parent().parent().parent().attr('id').split('_');
 		var idPrescType = tabId[1];
@@ -584,7 +602,7 @@ $(document).ready(function(){
 						$("#selectEmplacement").html("<img src='/images/load.gif' />");
 					},
 					success: function(msg){
-						$("#selectEmplacement").html(msg);						
+						$("#selectEmplacement").html(msg);
 					}
 				});
 			}
