--- a/application/views/scripts/changement/index.phtml
+++ b/application/views/scripts/changement/index.phtml
@@ -37,19 +37,23 @@
             var idEts = "<?php echo $this->etablissement['general']['ID_ETABLISSEMENT'] ?>";
             var changement = $(this).attr("data-value");
             var dialogAlerte = $('<div style="display:none;"></div>').appendTo('body');
-    
+
             dialogAlerte.dialog({
                 title: "Liste des balises disponibles",
                 modal: true,
                 autoOpen: false,
                 width: 600,
                 height: 'auto',
-                buttons: {
-                    "Fermer": function() {
-                        dialogAlerte.html("");
-                        dialogAlerte.dialog("close");
+                buttons: [
+                    {
+                        text: 'Fermer',
+                        class: 'btn',
+                        click: function() {
+                            dialogAlerte.html("");
+                            dialogAlerte.dialog("close");
+                        }
                     }
-                },
+                ],
                 close: function(event, ui){
                     dialogAlerte.html("");
                     dialogAlerte.dialog("close");
@@ -65,7 +69,7 @@
                 },
             });
             return false;
-            
+
         });
     });
 </script>
