--- a/application/views/scripts/dossier/liees.phtml
+++ b/application/views/scripts/dossier/liees.phtml
@@ -1,12 +1,12 @@
 <script type="text/javascript">
 	$(document).ready(function(){
-				
+
 		$('#listeEtab :input[name=idEtablissement]').each(function(){
 			$("#"+$(this).val()).remove();
 		});
-		
+
 		var dialogDossier = $('<div style="display:none"></div>').appendTo('body');
-		
+
 		dialogDossier.dialog({
 			title: "Liste des dossiers",
 			modal: true,
@@ -28,7 +28,7 @@
 						error: function()	{
 							return false;
 						}
-						
+
 					});
 					dialogDossier.dialog("close");
 				},
@@ -37,18 +37,18 @@
 				}
 			},
 			close: function(event, ui){
-				
+
 			}
-		});	
+		});
 
 		$("#saisieEtab").toggleText("Saisissez le libelle de l'etablissement");
 		$("#saisieDossier").toggleText("Saisissez le libelle du dossier");
-		
+
 		function loadInfosEtabs(){
 			//recharge la page pour afficher les établissements correctement
 			window.location='/dossier/liees/id/'+$('#idDossier').val();
 		}
-		
+
 		$("#add").live('click',function(){
 			//on récup le type (dossier ou etablissement)
 			var typeAdd = $('[name=linkType]').val();
@@ -71,11 +71,11 @@
 					}
 				});
 			}else if(typeAdd == 'dossier'){
-			
+
 			}
 			$(".form").reinitialiseForm();
 		});
-		
+
 		(function($) {
 		//permet de réinitialiser tous les champs. Suivant le type c'est soit les association soit les type
 			$.fn.affichageBoutton = function() {
@@ -85,14 +85,14 @@
 					},
 					text: false
 				});
-				
+
 				$(".cancelDelete").button({
 					icons: {
 						primary: 'ui-icon-circle-close'
 					},
 					text: true
 				});
-				
+
 				$(".confirmDelete").button({
 					icons: {
 						primary: 'ui-icon-circle-check'
@@ -100,7 +100,7 @@
 					text: true
 				});
 			};
-			
+
 			$.fn.reinitialiseForm = function(){
 				//alert('');
 				$("#saisieEtab").val('').blur();
@@ -111,14 +111,14 @@
 				$("#add").hide();
 				$("#cancelAdd").hide();
 			};
-		
-			
+
+
 		})(jQuery);
-		
+
 		$("#cancelAdd").live('click',function(){
 			$(".form").reinitialiseForm();
 		});
-		
+
 		$(".deleteChoix").live('click',function(){
 			//Lorsque l'on clique sur le boutton pour supprimer le lien avec un établissement
 			$(this).parent().hide();
@@ -130,7 +130,7 @@
 			$(this).parent().prev().show();
 			return false;
 		});
-		
+
 		//Suppression lien dossier
 		$(".deleteLienDossier").live('click',function(){
 			//Lorsque l'on clique sur le boutton pour supprimer le lien avec le dossier
@@ -138,14 +138,14 @@
 			$(this).parent().next().show();
 			return false;
 		});
-				
+
 		$(".cancelDeleteLienDossier").live('click',function(){
 			$(this).parent().hide();
 			$(this).parent().prev().show();
 			return false;
 		});
-		
-		
+
+
 		$(".confirmDelete").live('click',function(){
 			var idEtabDossier = $(this).parent().parent().children("[name=idEtablissementDossier]").val();
 			var divDelete = $(this);
@@ -165,7 +165,7 @@
 				}
 			});
 		});
-		
+
 		$(".confirmDeleteLienDossier").click(function(){
 			//Suppression dans la base du lien avec le dossier
 			var idLienDossier = $(this).parent().parent().prev().children("[name=idDossierLie]").val();
@@ -186,10 +186,10 @@
 					return false;
 				}
 			});
-			
+
 			return false;
 		});
-		
+
 		$("#save-liens").live('click',function(){
 			$.ajax({
 				url: "/dossier/lienmultiple",
@@ -208,7 +208,7 @@
 			});
 			return false;
 		});
-		
+
 		$("[name=linkType]").live('click',function(){
 			var choix = $(this).val();
 			if($(this).val() == 'etablissement'){
@@ -217,9 +217,9 @@
 			}else{
 				$("#saisieEtab").hide();
 				$("#saisieDossier").show();
-			}			
+			}
 		});
-		
+
 		$("#saisieEtab").autocomplete("/api/1.0/search/etablissements?format=json", {
             extraParams: {
                 label: function() {
@@ -287,14 +287,14 @@ echo "
 						";
                         if ($this->infosDossier['VERROU_DOSSIER'] == 0) {
                             echo "
-								<button class='deleteChoix btn' >Supprimer la liaison</button>
+								<button class='deleteChoix btn btn-warning'>Supprimer la liaison</button>
 							";
                         }
 						echo "
 								</span>
 								<span style='display:none;' >
-									<button class='confirmDelete btn' >Confirmer la suppression</button>
-									<button class='cancelDelete btn' >Annuler</button>
+									<button class='confirmDelete btn btn-danger'>Confirmer la suppression</button>
+									<button class='cancelDelete btn'>Annuler</button>
 								</span>
 							</div>
 						";
@@ -305,7 +305,7 @@ echo "
 					<hr class='clear'/>
 					<input type='radio' name='linkType' value='etablissement'>Etablissement&nbsp;&nbsp;
 					<input type='text' id='saisieEtab' value='' style='width:500px;display:none;' />
-					
+
 					<button class='add btn' id='add' style='display:none;' >Lier l'établissement au dossier</button>
 					<button class='cancelAdd btn' id='cancelAdd' style='display:none;' >Choisir un autre établissement</button>
 					<input type='hidden' name='idSelect' id='idSelect' value=''  />
@@ -327,10 +327,10 @@ echo "
 						</form>
 						<br/><br/><br/><br/>
 					";
-				}			
+				}
 			}
 		echo "
-		
+
 			<h2>Liste des dossiers liés au dossier</h2>
 			<div id='listeDossier'>
 			</div>
@@ -343,7 +343,7 @@ echo "
                     <div class='span10'>
                     	<a href='/dossier/index/id/".$dossier['dossierInfo'][0]['ID_DOSSIER']."'>
 			";
-			
+
 			if(isset($dossier['etabInfo']) && count($dossier['etabInfo']) > 0 ){
 				$nbEtabConcerne = count($dossier['etabInfo']);
 
@@ -401,17 +401,17 @@ echo "
 			</div>
 			<div class='span2'>
 				<span>
-					<button class='btn deleteLienDossier' ><i class='icon-trash'></i>&nbsp;Supprimer la liaison</button>
+					<button class='btn btn-warning deleteLienDossier'>Supprimer la liaison</button>
 				</span>
 				<span style='display:none;' >
-					<button class='btn confirmDeleteLienDossier btn-warning' >Confirmer la suppression</button>
-					<button class='btn cancelDeleteLienDossier' >Annuler</button>
+					<button class='btn confirmDeleteLienDossier btn-danger'>Confirmer la suppression</button>
+					<button class='btn cancelDeleteLienDossier'>Annuler</button>
 				</span>
 			</div>
 			</div>
 			";
 		}
-		echo "	
+		echo "
 			</div>
 			<br/>
 			<div class='grid_14 alpha form'>
