--- a/application/views/scripts/groupement/index.phtml
+++ b/application/views/scripts/groupement/index.phtml
@@ -18,7 +18,7 @@
     <!-- Icones -->
     <div class="btn-group" style='margin-bottom: 10px;'>
         <a id='save' href='#' class='btn btn-success' class='save' >Sauvegarder le groupement</a>
-        <a id='delete' href='#' class='btn' >Supprimer le groupement</a>
+        <a id='delete' href='#' class='btn btn-warning' >Supprimer le groupement</a>
     </div>
 
 </div>
@@ -58,39 +58,48 @@
 </div>
 
 <script type="text/javascript">
-
 	$("#confirm").dialog({
+        title: "Suppression d'un groupement",
 		resizable: false,
 		draggable: false,
-		height: 150,
+		height: 'auto',
+        width: 500,
 		autoOpen: false,
 		modal: true,
-		buttons: {
-			"Supprimer le groupement": function() {
-				$.ajax({
-					url: "/groupement/delete?id="+$("#gpt option:selected").val(),
-					beforeSend: function() {
-						$("#remove").button("disable");
-					},
-					success: function( result ) {
-						$("#remove").button("enable");
-						$("#notif").html("Le groupement a bien été supprimé.").show();
-						setTimeout( function() { $("#notif").fadeOut(); }, 2500);
-						
-						$("#gpt option:selected").remove();
-						$("#gpt option:first").attr("selected", "selected");
-						$("#gpt").change();
-						
-						$("#confirm").dialog( "close" );
-					}
-				});
-			},
-			"Annuler": function() {
-				$("#confirm").dialog( "close" );
-			}
-		}
+		buttons: [
+            {
+                text: 'Supprimer le groupement',
+                class: 'btn btn-danger',
+                click: function() {
+                    $.ajax({
+                        url: "/groupement/delete?id="+$("#gpt option:selected").val(),
+                        beforeSend: function() {
+                            $("#remove").button("disable");
+                        },
+                        success: function( result ) {
+                            $("#remove").button("enable");
+                            $("#notif").html("Le groupement a bien été supprimé.").show();
+                            setTimeout( function() { $("#notif").fadeOut(); }, 2500);
+
+                            $("#gpt option:selected").remove();
+                            $("#gpt option:first").attr("selected", "selected");
+                            $("#gpt").change();
+
+                            $("#confirm").dialog( "close" );
+                        }
+                    });
+                }
+            },
+            {
+                text: 'Annuler',
+                class: 'btn',
+                click: function() {
+                    $("#confirm").dialog( "close" );
+                }
+            }
+        ]
 	});
-	
+
 	$("#add").dialog({
 		title: "Création d'un nouveau groupement",
 		resizable: false,
@@ -99,28 +108,36 @@
 		width: 500,
 		modal: true,
 		autoOpen: false,
-		buttons: {
-			"Ajouter le groupement": function() {
-				$.ajax({
-					url: "/groupement/add?format=json",
-					type: "post",
-					data: $("#add-groupement").serialize(),
-					success: function( result ) {
+		buttons: [
+            {
+                text: 'Ajouter le groupement',
+                class: 'btn btn-success',
+                click: function() {
+                    $.ajax({
+                        url: "/groupement/add?format=json",
+                        type: "post",
+                        data: $("#add-groupement").serialize(),
+                        success: function( result ) {
 
-						$("#notif").html("Le groupement a bien été ajouté.").show();
-						$("select#gpt > optgroup#gpt_" + result["type"]).append( $("<option></option>").val( result["id"] ).html( result["libelle"] ).attr("selected", "selected") );
-						$("select#gpt").change();
-						setTimeout( function() { $("#notif").fadeOut(); }, 2500);
-						$("#add").dialog( "close" );
-					}
-				});
-			},
-			"Annuler": function() {
-				$("#add").dialog( "close" );
-			}
-		}
+                            $("#notif").html("Le groupement a bien été ajouté.").show();
+                            $("select#gpt > optgroup#gpt_" + result["type"]).append( $("<option></option>").val( result["id"] ).html( result["libelle"] ).attr("selected", "selected") );
+                            $("select#gpt").change();
+                            setTimeout( function() { $("#notif").fadeOut(); }, 2500);
+                            $("#add").dialog( "close" );
+                        }
+                    });
+                }
+            },
+            {
+                text: 'Annuler',
+                class: 'btn',
+                click: function() {
+                    $("#add").dialog( "close" );
+                }
+            }
+        ]
 	});
-	
+
 	// Boutons de la toolbar
 	// Selection de l'option "nouveau groupement"
 	$("#new").button({
@@ -131,11 +148,11 @@
 		$("#add").dialog("open");
 	// Sauvegarder
 	});
-	
+
 	$( "#save" ).click( function() {
 		// Selection de toutes les villes pour les passer dans le formulaire
 		$("#villes_groupement option").each(function(){ $(this).attr("selected", true);	});
-		
+
 		// On envoit le tout en ajax
 		$.ajax({
 			url: "/groupement/add?format=json",
@@ -153,26 +170,26 @@
 				setTimeout( function() { $("#notif").fadeOut(); }, 2500);
 			}
 		});
-		
+
 		// On deselectionne les villes
 		$("#villes_groupement option").each(function(){ $(this).attr("selected", false); });
 	// Suppression d'un groupement
 	});
-    
+
     $( "#delete" ).click( function() {
 		$("#confirm").dialog("open");
 	});
-	
+
 	// Gestion des évenements de la liste déroulante
 	$("#gpt").change( function() {
-    
+
         if($("#gpt").val() != null)
         {
             if( $("#gpt").val() == 0 )
                 $("#delete").button("disable");
             else
                 $("#delete").button("enable");
-            
+
             $.ajax({
                 url: "/groupement/display?id=" + $("#gpt").val(),
                 beforeSend: function() {
@@ -183,7 +200,7 @@
                     $("#form > #content").css( "opacity", 1 );
                 }
             });
-            
+
             $("#id_gpt").val( $("#gpt").val() ); // On change la valeur de l'id en cours
             $("#save").button("enable");
         }
@@ -192,7 +209,7 @@
             $("#save").button("disable");
         }
 	});
-	
+
 	$("#gpt").change(); // Initalisation
 
 
